# crm_metro

./: .gitignore  README.md
clients/web/: .eslintrc.json  .prettierrc  jsconfig.json  package.json
clients/web/src/: index.jsx  index.scss
clients/web/src/App/: App.jsx  App.module.scss  AppContainer.jsx  urlConst.js  urlConst.jsx
clients/web/src/api/: AuthService.js  TPActionsService.js  TPWorkService.js  UserService.js  WikiService.js  instances.js
clients/web/src/components/AppRouteContent/: AppRouteContent.jsx
clients/web/src/components/Buttons/: PrivateButton.jsx  PublicButton.jsx
clients/web/src/components/Header/: Header.jsx
clients/web/src/components/LoginForm/: LoginForm.jsx  LoginFormContainer.jsx
clients/web/src/components/MakeTable/: MakeTable.jsx  MakeTable.module.scss
clients/web/src/components/MenuItem/: AuthMenuItem.jsx  CommonMenuItem.jsx  GuestMenuItem.jsx
clients/web/src/components/NavLinks/: AuthNavLink.jsx  GuestNavLink.jsx
clients/web/src/design-tokens/: css-variables.scss
clients/web/src/redux/: constVar.js  store.js
deploy/: Caddyfile  caddy.service  gunicorn.service  gunicorn_crm_metro.service  gunicorn_crm_metro.socket  run_install.sh  run_update.sh
server/: manage.py  pyproject.toml
server/admin_honeypot/: forms.py  views.py
server/admin_honeypot/templates/admin_honeypot/: login.html
server/cms/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
server/cms/fixtures/: cms.DeviceForWork.json  cms.Okolotok.json  cms.Station.json  cms.TPTypeWork.json  cms.TechCard.json
server/cms/templates/cms/: login.html
server/deploy/: fixtures_load_run.sh  prod_settings.py
server/metro_cms_reset/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
(+63 files in other folders)
